--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,163 @@
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.box{
+  display: flex;
+  height: auto;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  padding: 10px;
+}
+.container{
+  max-width: 700px;
+  width: 100%;
+  border-radius: 25px;
+  background: rgb(245, 245, 245);
+  color:black;
+}
+.container .heading{
+  font-size: 25px;
+  font-weight: 500;
+  position: relative;
+  text-align: center;
+  padding: 10px 0 20px 0;
+}
+.container .heading::before{
+  content: '';
+  position: absolute;
+  height: 3px;
+  width: 100%;
+  left: 0;
+  bottom: 0;
+  background: red;
+}
+.container form .card-details{
+  margin-top: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+form .card-details .card-box{
+  width: calc(100% /2 -20px);
+  margin-bottom: 15px;
+}
+.card-details .card-box .details{
+  display: block;
+  font-weight: 500;
+  margin-bottom: 5px;
+}
+.card-details .card-box input{
+  height: 45px;
+  width: 100%;
+  outline: none;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  padding-left: 15px;
+  font-size: 16px;
+  border-bottom-width: 2px;
+  transition: all 0.3s ease;
+}
+.card-details .card-box input:focus,
+.card-details .card-box input:valid{
+  border-color: #9b59b6;
+}
+form .circle-form .circle-title{
+  font-size: 16px;
+  font-weight: 500;
+  margin: 0 4px 4px 0;
+}
+form .button{
+  text-align: center;
+}
+form .button input{
+  padding: 10px;
+  margin: 5px 0 10px 0;
+  height: 100%;
+  width: 50%;
+  font-weight: 500;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  font-size: 18px;
+  letter-spacing: 1px;
+}
+.setImg{
+  width: 25px;
+  height: 25px;
+  margin-right: 2px;
+}
+.contain{
+  width: 100%;
+  height: 91vh;
+  background: linear-gradient(65deg, red, blue);
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.profile-box{
+  background: #ff574a;
+  text-align: center;
+  padding: 40px 90px;
+  position: relative;
+  border-radius: 20px;
+}
+.menu-icon{
+  width: 25px;
+  position: absolute;
+  left: 40px;
+  top: 40px;
+  cursor: pointer;
+  border-radius: 50%;
+}
+.setting-icon{
+  width: 25px;
+  position: absolute;
+  right: 40px;
+  top: 40px;
+  cursor: pointer;
+  border-radius: 50%;
+}
+.profile-pic{
+  cursor: pointer;
+  width: 150px;
+  border-radius: 50%;
+  background: #fff;
+  padding: 6px;
+  margin-top: 40px;
+}
+.phone-icon{
+  width: 25px;
+  border-radius: 50%;
+}
+.mail-icon{
+  width: 25px;
+  border-radius: 50%;
+}
+.home-icon{
+  width: 25px;
+  border-radius: 50%;
+}
+.doctor-icon{
+  width: 25px;
+  border-radius: 50%;
+}
+.profile-bottom{
+  background: #fff;
+  color: #999;
+  padding: 60px 0;
+  margin: 10px -90px -40px -90px;
+  border-radius: 20px;
 }
